--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec babel-node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "npm install",
     "start": "babel-node src/index.js"
   },
   "repository": {
