--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-env": "^7.12.11",
     "apollo-server": "^2.19.1",
     "graphql": "^15.4.0",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "uuid": "^8.3.2"
   }
 }
