--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec babel-node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "npm install",
-    "start": "babel-node src/index.js"
+    "start": "babel-node src/index.js",
+    "test": "jest --coverage --forceExit --detectOpenHandles --maxWorkers=1"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/matthewjwhitney/health-quiz-server#readme",
   "devDependencies": {
+    "apollo-server-testing": "^2.19.2",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6"
   },
   "dependencies": {
@@ -30,5 +32,16 @@
     "graphql": "^15.4.0",
     "lodash": "^4.17.20",
     "uuid": "^8.3.2"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "lines": 100,
+        "statements": 100
+      }
+    }
   }
 }
